# Snake

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
include/Snake/: Apple.hpp  Game.hpp  PlayerInput.hpp  ResourceHolder.hpp  ResourceHolder.inl  ResourceIdentifiers.hpp  Sidebar.hpp  Snake.hpp  Statistic.hpp  Timer.hpp
src/Snake/: Apple.cpp  Game.cpp  PlayerInput.cpp  Sidebar.cpp  Snake.cpp  Statistic.cpp  Timer.cpp  main.cpp
